LoginPasswordView: SchedulePaint after setting placeholder text.

Otherwise any call after the initial SetPlaceholderText won't render.

R=jdufault@chromium.org

Bug: 846388
Test: none
Change-Id: If3de184b8f7367658e9e0d920c9edbc45ee5d0f3
Reviewed-on: https://chromium-review.googlesource.com/1072227
Reviewed-by: Jacob Dufault <jdufault@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: James Hawkins <jhawkins@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561603}
Former-commit-id: a2708eadbf26015b0fdce94180a1593c1b51c2c8